objects/Utilization__c.object
<CustomObject>
    <description>Utilization Reports are derived from Member Health for CCA and related modules.</description>
    <fields>
        <fullName>Active_Advisory_Board_Users__c</fullName>
        <label>Active Advisory Board Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Attending_Initiatives__c</fullName>
        <label>Active Attending Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Crimson_Users_per_Member__c</fullName>
        <label>Active Crimson Users per Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Initiative_Visits__c</fullName>
        <label>Active Initiative Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Member_Users__c</fullName>
        <label>Active Member Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Referring_Initiatives__c</fullName>
        <label>Active Referring Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_User_Filter__c</fullName>
        <formula>IF( Avg_of_Active_Users_per_Member__c &gt;= Project__r.Product__r.Active_Users_Threshold__c , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User Filter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Impressions__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Advertising Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Purchasers__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Advertising Purchasers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_online_referrals_48_hours__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Aged online referrals (&gt;48 hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analyst_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Analyst Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointments__c</fullName>
        <description>Created for CR-20160114-9519.</description>
        <inlineHelpText>Refers to the number of appointments booked through the firm’s health-post product.</inlineHelpText>
        <label>Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attending_Leakage_Report__c</fullName>
        <label>Attending Leakage Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attending_Physician_Report__c</fullName>
        <label>Attending Physician Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Logins_Filter__c</fullName>
        <formula>IF( Avg_of_Logins_per_Member__c &gt;= Project__r.Product__r.Average_Logins_Threshold__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Logins Filter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_session_time_per_Adv_Board_User__c</fullName>
        <label>Average session time per Adv Board User</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_session_time_per_Member_User__c</fullName>
        <label>Average session time per Member User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Page_Views_per_Login__c</fullName>
        <label>Avg Page Views per Login</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Self_Service_Accessed_Guidelines__c</fullName>
        <label>Avg. # Self-Service Accessed Guidelines</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Self_Service_Accessed_OPPE__c</fullName>
        <label>Avg. # Self-Service Accessed OPPE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Self_Service_Accessed_Outpatient__c</fullName>
        <label>Avg. # Self-Service Accessed Outpatient</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Session_Length__c</fullName>
        <label>Avg Session Length</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Super_Users_Accessed_Guidelines__c</fullName>
        <label>Avg. # Super-Users Accessed Guidelines</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Super_Users_Accessed_OPPE__c</fullName>
        <label>Avg. # Super-Users Accessed OPPE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Super_Users_Accessed_Outpatient__c</fullName>
        <label>Avg. # Super-Users Accessed Outpatient</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Active_Users_per_Member__c</fullName>
        <label>Avg. # of Active Users per Member</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Distinct_Self_Service_Logins__c</fullName>
        <label>Avg. # of Distinct Self-Service Logins</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Logins_per_Act_User_per_Mem__c</fullName>
        <description>Average number of logins per active user</description>
        <formula>Avg_of_Logins_per_Member__c / Avg_of_Active_Users_per_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. # of Logins per Act. User per Mem.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Logins_per_Member__c</fullName>
        <label>Avg. # of Logins per Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_of_Super_User_Logins__c</fullName>
        <label>Avg. # of Super-User Logins</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BHAG_of_referrals_w_clinical_document__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <inlineHelpText>BHAG: Percentage of referrals with clinical documentation attached by receiver</inlineHelpText>
        <label>BHAG:% of referrals w/clinical documents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Baseline_HCAHPS_Discharge__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Baseline HCAHPS Discharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Reports_Member_Logins__c</fullName>
        <label>CMA: Reports - Member Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Total_Member_Logins__c</fullName>
        <description>Created as part of CR 3433</description>
        <formula>(Web_App_Member_Logins__c)  +  (iPad_Member_Logins__c)  +  (CMA_Reports_Member_Logins__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMA: Total Member Logins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Web_App_Member_Users__c</fullName>
        <label>CMA: Web App Member Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Throughs__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Click Throughs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Attending_Initiatives__c</fullName>
        <label>Closed Attending Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Initiative_Visits__c</fullName>
        <label>Closed Initiative Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Referring_Initiatives__c</fullName>
        <label>Closed Referring Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_SR_Cases__c</fullName>
        <label>Closed SR Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consistent_Users_Filter__c</fullName>
        <formula>IF( Consistent_Users__c &gt;= Project__r.Product__r.Consistent_Users_Threshold__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consistent Users Filter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consistent_Users__c</fullName>
        <label>Consistent Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controlled_Market_Members__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Controlled Market Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Initiatives__c</fullName>
        <label>Count of Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crimson_Reports_Users__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Crimson Reports Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Metrics_Displayed__c</fullName>
        <label>Custom Metrics Displayed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date the data was posted on</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquent_Practices__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Delinquent Practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>PTD Utilization</relationshipLabel>
        <relationshipName>PTD_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distinct_Users__c</fullName>
        <label>Distinct Users</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Executive Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failed_Fax_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Failed Fax Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fall_Rate__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Fall Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Fax Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidelines_Utilized__c</fullName>
        <formula>IF(Number_of_Guidelines_Implemented__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidelines Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Doctors__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Doctors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Envir__c</fullName>
        <label>HCAHPS Envir</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Medicines__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Medicines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Nurses__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Nurses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Overall__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Overall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Pain__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Pain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCAHPS_Staff__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>HCAHPS Staff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_ANR__c</fullName>
        <label>Highest ANR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_CCC_Logins_100K_CV__c</fullName>
        <description>Created for CR-20141201-8199.</description>
        <label>Historical CCC Logins/100K CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Imp_Satisfaction_Likelihood_to_Recommend__c</fullName>
        <description>Created for CR-20141003-7632.</description>
        <label>Imp Satisfaction Likelihood to Recommend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Fees__c</fullName>
        <label>Implementation Fees</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Satisfaction_Score__c</fullName>
        <description>Created for CR-20141003-7632.</description>
        <label>Implementation Satisfaction Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>In-Network Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR 4062 - for CMR layout</description>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PTD Utilization</relationshipLabel>
        <relationshipName>PTD_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Lead Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leader_Rounding__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Leader Rounding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leakage_Report__c</fullName>
        <label>Leakage Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liaison_Logins__c</fullName>
        <description>created as part of CR 3433</description>
        <label>Liaison Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liaison_Report__c</fullName>
        <label>Liaison Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logins__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_days_from_open_to_any_other_status__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <inlineHelpText>Mean number of days from open to any other status</inlineHelpText>
        <label>Mean #days from open to any other status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_number_of_days_to_open_referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Mean number of days to open referrals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_Library_Utilized__c</fullName>
        <formula>IF( Measure_Library__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Measure Library Utilized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure_Library__c</fullName>
        <label>Measure Library Loaded</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>CR-20120213-442</description>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Num__c</fullName>
        <formula>CASE( Month__c ,
 &quot;January&quot;, 1, 
&quot;February&quot;, 2, 
&quot;March&quot;, 3, 
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
&quot;December&quot;, 12,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month_Num</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Count_of_Employees__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly Count of Employees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Count_of_Providers__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly Count of Providers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Covered_Lives__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly Covered Lives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Inpatient_Admissions__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly Inpatient Admissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_PO_Spend__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly PO Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Surgical_Procedures__c</fullName>
        <description>Created for CR-20160129-9568</description>
        <label>Monthly Surgical Procedures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Analysis_Report__c</fullName>
        <label>Network Analysis Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_tab_Visits__c</fullName>
        <label>Network tab Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Page_Views__c</fullName>
        <label>No. of Page Views</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Report__c</fullName>
        <label>Notes Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Guidelines_Implemented__c</fullName>
        <label># of Guidelines Implemented</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lives_Self_Insured__c</fullName>
        <label>Number of Lives Self-Insured</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lives_Standard_Population__c</fullName>
        <label>Number of Lives Standard Population</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Standard_Guidelines__c</fullName>
        <label># of Non-Standard Guidelines</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscribers_Self_Insured__c</fullName>
        <label>Number of Subscribers Self-Insured</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscribers_Std_Population__c</fullName>
        <label>Number of Subscribers Std Population</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Online Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Specialist_Users__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Online Specialist Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Specialists_Created__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Online Specialists Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Of_Network_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Out-Of-Network Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_tab_Visits__c</fullName>
        <label>Outreach tab Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCP_Offline_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>PCP Offline Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCP_Online_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>PCP Online Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCP_Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>PCP Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Daily_Rounds__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Patient Daily Rounds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Experience_Domain_Score__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Patient Experience Domain Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Profile_Visits__c</fullName>
        <label>Physician Profile Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practices__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practices_loaded_in_the_database__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Practices loaded in the database</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practices_with_Logins__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Practices with Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressure_Ulcer_Rate__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Pressure Ulcer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR 4062 - for CMR layout</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>PTD Utilization</relationshipLabel>
        <relationshipName>PTD_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Utilization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Providers_With_High_Utilization__c</fullName>
        <description>Created for CR-20160718-10046.</description>
        <inlineHelpText>Number of providers with 9+ appointments a month.</inlineHelpText>
        <label>Providers With High Utilization</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Providers_With_Low_Utilization__c</fullName>
        <description>Created for CR-20160718-10046.</description>
        <inlineHelpText>Number of providers with 0-3 appointments a month.</inlineHelpText>
        <label>Providers With Low Utilization</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Providers_With_Moderate_Utilization__c</fullName>
        <description>Created for CR-20160718-10046.</description>
        <inlineHelpText>Number of providers with 4-8 appointments a month.</inlineHelpText>
        <label>Providers With Moderate Utilization</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Practices__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Receiving Practices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognition_Rounds__c</fullName>
        <description>Created for CR-20140409-5018</description>
        <label>Recognition Rounds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_originating_practices_using__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Referral originating practices using</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_rec_r_practices_using_online__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Referral rec&apos;r practices using (online)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_receiver_practices_using_fax__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Referral receiver practices using (fax)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <label>Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrals_initiated_from_EMR_w_o_provide__c</fullName>
        <description>CR 4062 - for CMR layout</description>
        <inlineHelpText>Referrals initiated from EMR without provider specified</inlineHelpText>
        <label>Referrals initiated from EMR w/o provide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>